// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpScoutColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-1n1j3d6-HelpScoutColor"
  >
    <div
      class="css-18z1l5g-HelpScoutColor"
      style="display: inline-block;"
    >
      <div
        class="css-aqcb4x-HelpScoutColor"
      >
        <div
          class="css-13b5jdb-HelpScoutColor"
        >
          LAVENDER
        </div>
        <div
          class="css-1fl9th5-HelpScoutColor"
        >
          <div
            class="css-1hjzljz-HelpScoutColor"
          >
            500
          </div>
          <div
            class="css-1yuvbco-HelpScoutColor"
          >
            #9fa6ff
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HelpScoutColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1aetqh3-HelpScoutColorPalette"
  >
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-aqcb4x-HelpScoutColor"
        >
          <div
            class="css-13b5jdb-HelpScoutColor"
          >
            LAVENDER
          </div>
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              500
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #9fa6ff
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-1ag8w52-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              100
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #f9f9ff
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-18qlzyj-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              200
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #ebecff
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-6zd3ex-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              300
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #d9dcfd
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-1ng6ch1-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              400
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #b9beff
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-1f7ap52-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              500
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #9fa6ff
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-z1c5gx-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              600
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #818aec
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-1lsl3v9-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              700
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #6269c5
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-119t9l9-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              800
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #404996
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1n1j3d6-HelpScoutColor"
    >
      <div
        class="css-18z1l5g-HelpScoutColor"
        style="display: inline-block;"
      >
        <div
          class="css-tfhfu8-HelpScoutColor"
        >
          <div
            class="css-1fl9th5-HelpScoutColor"
          >
            <div
              class="css-1hjzljz-HelpScoutColor"
            >
              900
            </div>
            <div
              class="css-1yuvbco-HelpScoutColor"
            >
              #232a5c
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
